busy indicator, driver inheritIO, scheduled commands