@@ -3,6 +3,7 @@ package com.raytheon.ooi.driver_control;
 import org.apache.logging.log4j.LogManager;
 import org.controlsfx.dialog.Dialogs;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
@@ -18,14 +19,16 @@ public class DriverLauncher {
     public static Process launchDriver(DriverConfig config) throws IOException, InterruptedException {
         String scenarioPath = String.join("/", config.getTemp(), config.getScenario());
         unzipDriver(config.getEggUrl(), scenarioPath);
-        return runDriver(getEnv(scenarioPath), scenarioPath, config.getCommandPortFile(), config.getEventPortFile());
+        return runDriver(scenarioPath, config.getCommandPortFile(), config.getEventPortFile());
     }
 
-    public static String[] getEnv(String scenarioPath) {
-        log.debug("Building ENV");
+    public static Map<String, String> getEnv(String scenarioPath) {
+        log.debug("Building ENV: scenarioPath: {}", scenarioPath);
+
         List<String> eggs = getResourceList("eggs.txt");
         List<String> externs = getResourceList("externs.txt");
 
+        // verify required environmental variables are already set
         String virtualEnv = System.getenv("VIRTUAL_ENV");
         String workingPath = System.getenv("TEST_BASE");
         if (virtualEnv == null || workingPath == null)
@@ -33,13 +36,20 @@ public class DriverLauncher {
             missingEnvironmentVariable(String.format("VIRTUAL_ENV: %s TEST_BASE: %s", virtualEnv, workingPath));
             return null;
         }
-        String path = String.format("PATH=%s/bin:%s", System.getenv("VIRTUAL_ENV"), System.getenv("PATH"));
 
+        // Build the python path
         StringJoiner joiner = new StringJoiner(":");
         for (String egg: eggs) joiner.add(String.format("%s/eggs/%s", workingPath, egg));
         for (String extern: externs) joiner.add(String.format("%s/extern/%s", workingPath, extern));
 
-        return new String[]{path, String.format("PYTHONPATH=%s:%s", scenarioPath, joiner.toString())};
+        String path = String.format("%s/bin:%s", System.getenv("VIRTUAL_ENV"), System.getenv("PATH"));
+        String pythonPath = String.format("%s:%s", scenarioPath, joiner.toString());
+
+        Map<String, String> env = new HashMap<>();
+        env.put("PATH", path);
+        env.put("PYTHONPATH", pythonPath);
+        log.trace("Built ENV: {}", env);
+        return env;
     }
 
     public static void missingEnvironmentVariable(String envVar) {
@@ -51,7 +61,7 @@ public class DriverLauncher {
     }
 
     public static List<String> getResourceList(String resourceName) {
-        log.debug("Getting resource list: {}", resourceName);
+        log.trace("Getting resource list: {}", resourceName);
         List<String> resources = new LinkedList<>();
         InputStream is = DriverLauncher.class.getClass().getResourceAsStream("/" + resourceName);
         Scanner scanner = new Scanner(is);
@@ -92,9 +102,14 @@ public class DriverLauncher {
         patch_zmq_driver(scenarioPath);
     }
 
-    public static Process runDriver(String[] env, String scenario, String command, String event) throws IOException {
-        String[] args = {"python", scenario + "/mi/main.py", "--command_port", command, "--event_port", event };
+    public static Process runDriver(String scenarioPath, String command, String event) throws IOException {
+        String[] args = {"python", "mi/main.py", "--command_port", command, "--event_port", event };
         log.debug("Launching driver: {}", String.join(" ", args));
-        return Runtime.getRuntime().exec(args, env);
+
+        ProcessBuilder pb = new ProcessBuilder(args);
+        Map<String, String> environment = pb.environment();
+        environment.putAll(getEnv(scenarioPath));
+        pb.directory(new File(scenarioPath));
+        return pb.inheritIO().start();
     }
 }
